# fleet

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
codex/: README.md
codex/_template/: README.md  demo.py
codex/compass/: README.md  __init__.py  codec.py  demo.py
codex/drift/: README.md  codec.py  demo.py
codex/root/: README.md  __init__.py  codec.py  demo.py
codex/turboquant/: README.md  codec.py  demo.py  notes.md
fleet_codecs/: README.md
fleet_codecs/_template/: README.md  codec.py  demo.py  notes.md
fleet_codecs/compass/: README.md  demo.py  notes.md
fleet_codecs/drift/: README.md  __init__.py  demo.py  notes.md
fleet_codecs/root/: README.md  demo.py  notes.md
fleet_codecs/turboquant/: README.md  __init__.py  demo.py  notes.md
fleet_studies/: README.md
fleet_studies/_template/: README.md  notes.md  run.py
fleet_testing/: README.md  __init__.py  fixtures.py  harness.py  protocol.py
studies/: README.md
studies/_template/: README.md  run.py
testing/: README.md  __init__.py  assertions.py  fixtures.py  generators.py  harness.py
tests/: README.md  conftest.py  test_compass.py  test_drift.py  test_root.py  test_turboquant.py
